--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,37 +1,22 @@
-.ios, .md {
- 
-    home-page {
- 
-        ion-content {
-            background-color: map-get($colors, dark);
-        }
- 
-        p {
-            background-color: #a0b1b2;
-            padding: 20px;
-            text-align: center;
-        }
- 
-        .header {
-            width: 100%;
-            height: 200px;
-        }
- 
-        ion-card {
-            position: relative;
-            text-align: center;
-            margin: 0;
-            width: 100%;
-        }
- 
-        .button-container{
-            width: 100%;
-            text-align: center;
-        }
- 
-        .button-container button {
-            width: 90%;
+$SIDEMENU_TOP: #ff4b1f;
+$SIDEMENU_BOTTOM: #ff9868;
+$SIDEMENU_TRANSPARENCY: rgba(255, 255, 255, 0.4);
+.side-menu-item {
+    background: none;
+    color: white;
+    font-weight: 300;
+    border: 0px;
+    .item-content {
+        background: none;
+        &.activated {
+            background: $SIDEMENU_TRANSPARENCY;
         }
     }
- 
+}
+
+.side-menu-gradient {
+    background: -webkit-linear-gradient(left top, $SIDEMENU_TOP, $SIDEMENU_BOTTOM);
+    background: -o-linear-gradient(bottom right, $SIDEMENU_TOP, $SIDEMENU_BOTTOM);
+    background: -moz-linear-gradient(bottom right, $SIDEMENU_TOP, $SIDEMENU_BOTTOM);
+    background: linear-gradient(to bottom right, $SIDEMENU_TOP, $SIDEMENU_BOTTOM);
 }
