--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,22 +1,27 @@
-$SIDEMENU_TOP: #ff4b1f;
-$SIDEMENU_BOTTOM: #ff9868;
-$SIDEMENU_TRANSPARENCY: rgba(255, 255, 255, 0.4);
-.side-menu-item {
-    background: none;
-    color: white;
-    font-weight: 300;
-    border: 0px;
-    .item-content {
-        background: none;
-        &.activated {
-            background: $SIDEMENU_TRANSPARENCY;
-        }
+page-home {
+    ion-card {
+        height: 300px;
+        overflow: hidden;
+        text-align: center;
+        position: relative;
     }
-}
-
-.side-menu-gradient {
-    background: -webkit-linear-gradient(left top, $SIDEMENU_TOP, $SIDEMENU_BOTTOM);
-    background: -o-linear-gradient(bottom right, $SIDEMENU_TOP, $SIDEMENU_BOTTOM);
-    background: -moz-linear-gradient(bottom right, $SIDEMENU_TOP, $SIDEMENU_BOTTOM);
-    background: linear-gradient(to bottom right, $SIDEMENU_TOP, $SIDEMENU_BOTTOM);
+    .header {
+        width: 100%;
+        height: 200px;
+    }
+    .nombre {
+        position: absolute;
+        top: 36%;
+        font-size: 2.5em;
+        width: 100%;
+        font-weight: bold;
+        color: #fff;
+    }
+    .rating {
+        position: absolute;
+        top: 52%;
+        font-size: 2.0em;
+        width: 100%;
+        color: #fff;
+    }
 }
