--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,26 @@
-<ion-nav [root]="rootPage"></ion-nav>
+<ion-menu [content]="nav">
+    <ion-header>
+        <ion-toolbar>
+            <ion-title>Eventro</ion-title>
+
+        </ion-toolbar>
+    </ion-header>
+    <ion-content>
+        <ion-list>
+            <button ion-item (click)="irAPagina(menuPage)">
+                <ion-icon name="send" item-left></ion-icon>
+                Categorias</button>
+            <button ion-item (click)="irAPagina(homePage)">
+                    <ion-icon name="send" item-left></ion-icon>
+
+                Eventos del dia</button>
+            <button ion-item (click)="irAPagina(eventosPage)">
+                        <ion-icon name="send" item-left></ion-icon>
+    
+                    Eventos</button>
+        </ion-list>
+
+    </ion-content>
+</ion-menu>
+
+<ion-nav [root]="rootPage" #nav></ion-nav>
